--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title> Geetha S <Video></Video> Portfolio</title>
+    <title> Haritha <Video></Video> Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -96,7 +96,7 @@
         <div class="header-content">
             <!-- Add your profile picture here -->
             <img src="./photo.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1>Geetha S</h1>
+            <h1>Haritha V</h1>
             <p>Student</p>
         </div>
     </header>
@@ -127,7 +127,7 @@
     <section id="education">
         <div class="section-content">
             <h2>Education</h2>
-            <p>Madras University  - BCA</p>
+            <p>Madras University  - BSC.CS</p>
             
             
         </div>
@@ -175,7 +175,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Geetha S V</p>
+        <p>&copy; 2025 Haritha V</p>
     </footer>
 
     <script>
@@ -197,5 +197,4 @@
         });
     </script>
 </body>
-
 </html>
