--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <body>
     <header>
         <div class="header-content>
-            <img src="./photo.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
+            <img src="./photo png.jpg" alt="Your Profile Picture" class="profile-picture">
             <h1>Geetha s</h1>
             <p>Student</p>
         </div>
@@ -198,3 +198,4 @@
 </body>
 
 </html>
+
